# adam-http-mcp

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  DEV_SETUP.md  Dockerfile  README.md  adam-mcp.service  adam_api.py  adam_cli.py  apache2-adam-mcp.conf  api_summary.md  claude-desktop-config.json  config.py  manage_server.sh  mcpServers.json  package-lock.json  package.json  pyproject.toml  server.py  test_mcp.sh  test_stdio.sh
.claude-flow/metrics/: system-metrics.json
.swarm/: memory.db-shm  memory.db-wal
docs/: PORT_RELEASE_ISSUE.md
src/: index.ts  tools.ts
