[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adam-cli"
version = "1.0.0"
description = "CLI for ADAM School Management Information System"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25"]

[project.scripts]
adam = "adam_cli:main"

[tool.setuptools]
py-modules = ["adam_cli"]
